<resources>
    <string name="app_name">Cool Weather APP</string>
    <string name="temperature">Temperature</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="update">Update</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="time">Time</string>
</resources>