<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="dam_A51609.coolweatherapp.WeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/clear_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dataLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:background="#80FFFFFF"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherIcon">

            
            <TextView
                android:id="@+id/latitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/latitudeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={viewModel.inputLatitude}"
                android:inputType="numberDecimal|numberSigned"
                android:minEms="5"
                app:layout_constraintBaseline_toBaselineOf="@id/latitudeLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            
            <TextView
                android:id="@+id/longitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/longitude"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/latitudeInput" />

            <EditText
                android:id="@+id/longitudeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={viewModel.inputLongitude}"
                android:inputType="numberDecimal|numberSigned"
                android:minEms="5"
                app:layout_constraintBaseline_toBaselineOf="@id/longitudeLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            
            <TextView
                android:id="@+id/pressureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pressure"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/longitudeInput" />

            <TextView
                android:id="@+id/pressureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.pressure}"
                app:layout_constraintBaseline_toBaselineOf="@id/pressureLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            
            <TextView
                android:id="@+id/windDirectionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/wind_direction"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pressureLabel" />

            <TextView
                android:id="@+id/windDirectionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.windDirection}"
                app:layout_constraintBaseline_toBaselineOf="@id/windDirectionLabel"
                app:layout_constraintEnd_toEndOf="parent" />

                
            <TextView
                android:id="@+id/windSpeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/wind_speed"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/windDirectionLabel" />

            <TextView
                android:id="@+id/windSpeedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.windSpeed}"
                app:layout_constraintBaseline_toBaselineOf="@id/windSpeedLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            
            <TextView
                android:id="@+id/temperatureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/temperature"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/windSpeedLabel" />

            <TextView
                android:id="@+id/temperatureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.temperature}"
                app:layout_constraintBaseline_toBaselineOf="@id/temperatureLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            
            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/time"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/temperatureLabel" />

            <TextView
                android:id="@+id/timeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.time}"
                app:layout_constraintBaseline_toBaselineOf="@id/timeLabel"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/update"
            android:onClick="@{() -> viewModel.onUpdateClicked()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>